--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <p>新版本可供使用，是否加载更新？</p>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button mat-button matDialogClose color="warn">取消</button>
+        <button mat-button matDialogClose>取消</button>
         <button mat-button [mat-dialog-close]="true" cdkFocusInitial color="accent">更新</button>
     </mat-dialog-actions>
 </ng-template>
