--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -19,11 +19,6 @@
                     <mat-icon class="secondary-text">menu</mat-icon>
                 </ng-template>
             </button>
-            <button mat-icon-button
-                    class="navbar-toggle-button"
-                    (click)="onLockButtonClick()">
-                <mat-icon class="secondary-text">lock</mat-icon>
-            </button>
         </div>
 
         <div fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
@@ -41,7 +36,12 @@
             <!-- search bar -->
             <notadd-search-bar (input)="search($event)"></notadd-search-bar>
 
-            <div class="toolbar-separator" fxHide.xs></div>
+            <!-- lock screen -->
+            <button mat-icon-button
+                    class="toolbar-button"
+                    (click)="onLockButtonClick()">
+                <mat-icon class="s-20 secondary-text">lock</mat-icon>
+            </button>
 
             <!-- fullscreen toggle -->
             <button mat-icon-button
@@ -50,8 +50,6 @@
                     (click)="toggleFullscreen()">
                 <mat-icon class="s-24 secondary-text">{{isFullscreen ? 'fullscreen_exit' : 'fullscreen'}}</mat-icon>
             </button>
-
-            <div class="toolbar-separator" fxHide.xs></div>
 
             <!-- not xs breakpoint settings template -->
             <ng-container *ngIf="!isMobile">
@@ -122,7 +120,6 @@
 
     </mat-menu>
 
-    <div class="toolbar-separator" fxHide.xs></div>
 </ng-template>
 
 <!-- language -->
@@ -143,7 +140,6 @@
         </button>
     </mat-menu>
 
-    <div class="toolbar-separator" fxHide.xs></div>
 </ng-template>
 
 <!-- settings -->
