--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -19,6 +19,9 @@
                     <mat-icon class="secondary-text">menu</mat-icon>
                 </ng-template>
             </button>
+
+            <!-- toolbar nav -->
+            <notadd-toolbar-nav></notadd-toolbar-nav>
         </div>
 
         <div fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
@@ -95,7 +98,7 @@
         <div fxLayout="row" fxLayoutAlign="center center">
             <img class="avatar" src="assets/images/avatars/tianhun.jpg">
             <span class="secondary-text">天魂</span>
-            <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
+            <mat-icon class="s-20">keyboard_arrow_down</mat-icon>
         </div>
     </button>
 
@@ -130,7 +133,7 @@
         <div fxLayout="row" fxLayoutAlign="center center">
             <mat-icon class="s-20 mr-4 secondary-text">language</mat-icon>
             <span class="secondary-text">{{currentLanguage.title}}</span>
-            <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
+            <mat-icon class="s-20">keyboard_arrow_down</mat-icon>
         </div>
     </button>
 
