--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -22,6 +22,7 @@ layout {
             width: 100%;
             min-height: 0;
             min-width: 0;
+            background-color: #f1f4f5;
 
             > .mat-sidenav{
                 box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.35);
