feat(app/main): amend json-schema-form component layout style

--- a/src/app/main/elements/advanced-ui/json-schema-form/json-schema-form.component.scss
+++ b/src/app/main/elements/advanced-ui/json-schema-form/json-schema-form.component.scss
@@ -1,13 +1,15 @@
-.demo-page-header {
-    margin-bottom: 12px;
-
-    .header-content {
-        line-height: 1.4em;
-        padding: 12px;
-
-        .menu-label {
-            margin-right: 12px;
-            font-weight: bold;
+.element-jsonform {
+    .header {
+        margin-bottom: 12px;
+    
+        .header-content {
+            line-height: 1.4em;
+            padding: 12px 0;
+    
+            .menu-label {
+                margin-right: 12px;
+                font-weight: bold;
+            }
         }
     }
 }
